hphp/test/zend/good/ext/mbstring/tests/mb_strpos_variation3.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strpos') or die("skip mb_strpos() is not available in this build");
?>