hphp/test/zend/bad/ext/mbstring/tests/mb_strrchr_error1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strrchr') or die("skip mb_strrchr() is not available in this build");
?> 